# rs_diff_patch

./: .gitignore  Cargo.toml  README.md
diff_lib/: Cargo.toml
diff_lib/src/: apply.rs  crange.rs  diff.rs  lcs.rs  lib.rs  lines.rs  matcher.rs  modifications.rs  range.rs  snippet.rs
diff_lib/src/apply/: apply_tests.rs
diff_lib/src/diff/: tests.rs
diff_lib/src/matcher/: matcher_tests.rs
diff_lib_ng/: Cargo.toml
diff_lib_ng/src/: apply.rs  common_subsequence.rs  data.rs  diff.rs  lib.rs  modifications.rs  snippet.rs
pw_cub_diff_lib/: Cargo.toml
pw_cub_diff_lib/src/: git_binary_diff.rs  lib.rs  text_diff.rs  unified_diff.rs  unified_diff_copy.rs
pw_cub_diff_lib/src/git_binary_diff/: git_delta.rs
pw_cub_diff_lib/test_diffs/: test_1.diff
pw_diff/: Cargo.toml
pw_diff/src/: main.rs  main_copy.rs
pw_diff_lib/: Cargo.toml
pw_diff_lib/src/: apply.rs  apply_bytes.rs  apply_bytes_copy.rs  apply_text.rs  apply_text_copy.rs  byte_diff.rs  byte_diff_copy.rs  changes.rs  data.rs  diff.rs  diff_copy.rs  lib.rs  modifications.rs  modifications_copy.rs  range.rs  sequence.rs  snippet.rs  text_diff.rs  text_diff_copy.rs
pw_diff_lib/src/apply/: apply_tests.rs
pw_diff_lib/src/apply_text/: apply_tests.rs
pw_patch/: Cargo.toml
pw_patch/src/: main.rs  main_copy.rs
pw_unified_lib/: Cargo.toml  build.rs  unified.spec
pw_unified_lib/src/: lib.rs  parser_attributes.rs  unified_diff.laps  unified_diff.rs  unified_diffs.laps  unified_diffs.rs  unified_parser.laps  unified_parser.rs  unified_parser.states
test_files/: file_1_modified  file_1_original
(+4 files in other folders)
