[package]
name = "pw_patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
structopt = "0.3"
log = "0.4"

diff_lib = { path = "../diff_lib" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
stderrlog = "0.6.0"
temp-file = "0.1"
